// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBaseChildStyles() should return correct css for child: input, state: error, theme: light and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(input)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #E7323B",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#010205",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 10px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "border-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(input:disabled)": {
    "WebkitTextFillColor": "#949598",
    "borderColor": "#949598",
    "color": "#949598",
    "cursor": "not-allowed",
  },
  "::slotted(input:focus)": {
    "borderColor": "#010205",
  },
  "::slotted(input[readonly])": {
    "background": "#D8D8DB",
    "borderColor": "#D8D8DB",
  },
  "@media(hover:hover)": {
    "::slotted(input:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#c51720",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: input, state: none, theme: light and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(input)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #949598",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#010205",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 10px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "border-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(input:disabled)": {
    "WebkitTextFillColor": "#949598",
    "borderColor": "#949598",
    "color": "#949598",
    "cursor": "not-allowed",
  },
  "::slotted(input:focus)": {
    "borderColor": "#010205",
  },
  "::slotted(input[readonly])": {
    "background": "#D8D8DB",
    "borderColor": "#D8D8DB",
  },
  "@media(hover:hover)": {
    "::slotted(input:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#010205",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: input, state: success, theme: light and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(input)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #32B85B",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#010205",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 10px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "border-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(input:disabled)": {
    "WebkitTextFillColor": "#949598",
    "borderColor": "#949598",
    "color": "#949598",
    "cursor": "not-allowed",
  },
  "::slotted(input:focus)": {
    "borderColor": "#010205",
  },
  "::slotted(input[readonly])": {
    "background": "#D8D8DB",
    "borderColor": "#D8D8DB",
  },
  "@media(hover:hover)": {
    "::slotted(input:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#258843",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: select, state: error, theme: dark and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(select)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #CB3333",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 10px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "border-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(select:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(select:focus)": {
    "borderColor": "#FBFCFF",
  },
  "@media(hover:hover)": {
    "::slotted(select:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#9a2727",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: select, state: none, theme: dark and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(select)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #7E7F82",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 10px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "border-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(select:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(select:focus)": {
    "borderColor": "#FBFCFF",
  },
  "@media(hover:hover)": {
    "::slotted(select:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#FBFCFF",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: select, state: success, theme: dark and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(select)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #00C77E",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 10px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "border-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(select:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(select:focus)": {
    "borderColor": "#FBFCFF",
  },
  "@media(hover:hover)": {
    "::slotted(select:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#008a57",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: textarea, state: error, theme: dark and additionalDefaultJssStyle: { bottom: 5 } 1`] = `
{
  "::slotted(textarea)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #CB3333",
    "borderRadius": "4px",
    "bottom": 5,
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 10px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "border-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(textarea:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(textarea:focus)": {
    "borderColor": "#FBFCFF",
  },
  "::slotted(textarea[readonly])": {
    "background": "#404044",
    "borderColor": "#404044",
  },
  "@media(hover:hover)": {
    "::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#9a2727",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: textarea, state: error, theme: dark and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(textarea)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #CB3333",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 10px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "border-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(textarea:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(textarea:focus)": {
    "borderColor": "#FBFCFF",
  },
  "::slotted(textarea[readonly])": {
    "background": "#404044",
    "borderColor": "#404044",
  },
  "@media(hover:hover)": {
    "::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#9a2727",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: textarea, state: none, theme: dark and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(textarea)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #7E7F82",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 10px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "border-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(textarea:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(textarea:focus)": {
    "borderColor": "#FBFCFF",
  },
  "::slotted(textarea[readonly])": {
    "background": "#404044",
    "borderColor": "#404044",
  },
  "@media(hover:hover)": {
    "::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#FBFCFF",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: textarea, state: success, theme: dark and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(textarea)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #00C77E",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 10px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "border-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(textarea:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(textarea:focus)": {
    "borderColor": "#FBFCFF",
  },
  "::slotted(textarea[readonly])": {
    "background": "#404044",
    "borderColor": "#404044",
  },
  "@media(hover:hover)": {
    "::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#008a57",
    },
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: false, state: { base: true, xs: false, s: true, m: false, l: true, xl: false }, theme: error and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#AFB0B3",
        "fontSize": ".875rem",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly])),::slotted(input:not(:disabled):not(:focus):not([readonly]):hover)": {
            "borderColor": "#9a2727 !important",
          },
        },
      },
      "@media(min-width:1000px)": {
        "clip": "auto",
        "clipPath": "none",
        "height": "auto",
        "margin": 0,
        "overflow": "visible",
        "position": "static",
        "whiteSpace": "normal",
        "width": "fit-content",
      },
      "@media(min-width:1300px)": {
        "border": "0",
        "clip": "rect(1px,1px,1px,1px)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "fit-content",
      },
      "@media(min-width:1760px)": {
        "clip": "auto",
        "clipPath": "none",
        "height": "auto",
        "margin": 0,
        "overflow": "visible",
        "position": "static",
        "whiteSpace": "normal",
        "width": "fit-content",
      },
      "@media(min-width:480px)": {
        "clip": "auto",
        "clipPath": "none",
        "height": "auto",
        "margin": 0,
        "overflow": "visible",
        "position": "static",
        "whiteSpace": "normal",
        "width": "fit-content",
      },
      "@media(min-width:760px)": {
        "border": "0",
        "clip": "rect(1px,1px,1px,1px)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "fit-content",
      },
      "border": "0",
      "clip": "rect(1px,1px,1px,1px)",
      "clipPath": "inset(50%)",
      "color": "#FBFCFF",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "margin": "-1px",
      "overflow": "hidden",
      "overflowWrap": "break-word",
      "position": "absolute",
      "transition": "color var(--p-transition-duration, .24s) ease",
      "whiteSpace": "nowrap",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
  "unit": {
    "display": "block ",
    "pointerEvents": "none",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: false, state: false, theme: error and additionalRefForInputHover: light 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#535457",
        "fontSize": ".875rem",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly])),::slotted(input:not(:disabled):not(:focus):not([readonly]):hover)": {
            "borderColor": "#c51720 !important",
          },
        },
      },
      "clip": "auto",
      "clipPath": "none",
      "color": "#010205",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "auto",
      "hyphens": "auto",
      "margin": 0,
      "overflow": "visible",
      "overflowWrap": "break-word",
      "position": "static",
      "transition": "color var(--p-transition-duration, .24s) ease",
      "whiteSpace": "normal",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: false, state: false, theme: none and additionalRefForInputHover: light 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#535457",
        "fontSize": ".875rem",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#010205 !important",
          },
        },
      },
      "clip": "auto",
      "clipPath": "none",
      "color": "#010205",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "auto",
      "hyphens": "auto",
      "margin": 0,
      "overflow": "visible",
      "overflowWrap": "break-word",
      "position": "static",
      "transition": "color var(--p-transition-duration, .24s) ease",
      "whiteSpace": "normal",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: false, state: false, theme: success and additionalRefForInputHover: light 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#535457",
        "fontSize": ".875rem",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly])),::slotted(input:not(:disabled):not(:focus):not([readonly]):hover)": {
            "borderColor": "#258843 !important",
          },
        },
      },
      "clip": "auto",
      "clipPath": "none",
      "color": "#010205",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "auto",
      "hyphens": "auto",
      "margin": 0,
      "overflow": "visible",
      "overflowWrap": "break-word",
      "position": "static",
      "transition": "color var(--p-transition-duration, .24s) ease",
      "whiteSpace": "normal",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: false, state: true, theme: error and additionalRefForInputHover: light 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#535457",
        "fontSize": ".875rem",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly])),::slotted(input:not(:disabled):not(:focus):not([readonly]):hover)": {
            "borderColor": "#c51720 !important",
          },
        },
      },
      "border": "0",
      "clip": "rect(1px,1px,1px,1px)",
      "clipPath": "inset(50%)",
      "color": "#010205",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "margin": "-1px",
      "overflow": "hidden",
      "overflowWrap": "break-word",
      "position": "absolute",
      "transition": "color var(--p-transition-duration, .24s) ease",
      "whiteSpace": "nowrap",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: false, state: true, theme: none and additionalRefForInputHover: light 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#535457",
        "fontSize": ".875rem",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#010205 !important",
          },
        },
      },
      "border": "0",
      "clip": "rect(1px,1px,1px,1px)",
      "clipPath": "inset(50%)",
      "color": "#010205",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "margin": "-1px",
      "overflow": "hidden",
      "overflowWrap": "break-word",
      "position": "absolute",
      "transition": "color var(--p-transition-duration, .24s) ease",
      "whiteSpace": "nowrap",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: false, state: true, theme: success and additionalRefForInputHover: light 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#535457",
        "fontSize": ".875rem",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly])),::slotted(input:not(:disabled):not(:focus):not([readonly]):hover)": {
            "borderColor": "#258843 !important",
          },
        },
      },
      "border": "0",
      "clip": "rect(1px,1px,1px,1px)",
      "clipPath": "inset(50%)",
      "color": "#010205",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "margin": "-1px",
      "overflow": "hidden",
      "overflowWrap": "break-word",
      "position": "absolute",
      "transition": "color var(--p-transition-duration, .24s) ease",
      "whiteSpace": "nowrap",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: true, state: true, theme: error and additionalRefForInputHover: light 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "fontSize": ".875rem",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly])),::slotted(input:not(:disabled):not(:focus):not([readonly]):hover)": {
            "borderColor": "#c51720 !important",
          },
        },
      },
      "border": "0",
      "clip": "rect(1px,1px,1px,1px)",
      "clipPath": "inset(50%)",
      "color": "#949598",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "margin": "-1px",
      "overflow": "hidden",
      "overflowWrap": "break-word",
      "position": "absolute",
      "transition": "color var(--p-transition-duration, .24s) ease",
      "whiteSpace": "nowrap",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: textarea, hideLabel: false, state: false, theme: error and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#AFB0B3",
        "fontSize": ".875rem",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(textarea:not(:disabled):not(:focus):not([readonly])),::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover)": {
            "borderColor": "#9a2727 !important",
          },
        },
      },
      "clip": "auto",
      "clipPath": "none",
      "color": "#FBFCFF",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "auto",
      "hyphens": "auto",
      "margin": 0,
      "overflow": "visible",
      "overflowWrap": "break-word",
      "position": "static",
      "transition": "color var(--p-transition-duration, .24s) ease",
      "whiteSpace": "normal",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: textarea, hideLabel: false, state: false, theme: none and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#AFB0B3",
        "fontSize": ".875rem",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(textarea:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#FBFCFF !important",
          },
        },
      },
      "clip": "auto",
      "clipPath": "none",
      "color": "#FBFCFF",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "auto",
      "hyphens": "auto",
      "margin": 0,
      "overflow": "visible",
      "overflowWrap": "break-word",
      "position": "static",
      "transition": "color var(--p-transition-duration, .24s) ease",
      "whiteSpace": "normal",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: textarea, hideLabel: false, state: false, theme: success and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#AFB0B3",
        "fontSize": ".875rem",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(textarea:not(:disabled):not(:focus):not([readonly])),::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover)": {
            "borderColor": "#008a57 !important",
          },
        },
      },
      "clip": "auto",
      "clipPath": "none",
      "color": "#FBFCFF",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "auto",
      "hyphens": "auto",
      "margin": 0,
      "overflow": "visible",
      "overflowWrap": "break-word",
      "position": "static",
      "transition": "color var(--p-transition-duration, .24s) ease",
      "whiteSpace": "normal",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: textarea, hideLabel: false, state: true, theme: error and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#AFB0B3",
        "fontSize": ".875rem",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(textarea:not(:disabled):not(:focus):not([readonly])),::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover)": {
            "borderColor": "#9a2727 !important",
          },
        },
      },
      "border": "0",
      "clip": "rect(1px,1px,1px,1px)",
      "clipPath": "inset(50%)",
      "color": "#FBFCFF",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "margin": "-1px",
      "overflow": "hidden",
      "overflowWrap": "break-word",
      "position": "absolute",
      "transition": "color var(--p-transition-duration, .24s) ease",
      "whiteSpace": "nowrap",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: textarea, hideLabel: false, state: true, theme: none and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#AFB0B3",
        "fontSize": ".875rem",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(textarea:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#FBFCFF !important",
          },
        },
      },
      "border": "0",
      "clip": "rect(1px,1px,1px,1px)",
      "clipPath": "inset(50%)",
      "color": "#FBFCFF",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "margin": "-1px",
      "overflow": "hidden",
      "overflowWrap": "break-word",
      "position": "absolute",
      "transition": "color var(--p-transition-duration, .24s) ease",
      "whiteSpace": "nowrap",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: textarea, hideLabel: false, state: true, theme: success and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#AFB0B3",
        "fontSize": ".875rem",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(textarea:not(:disabled):not(:focus):not([readonly])),::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover)": {
            "borderColor": "#008a57 !important",
          },
        },
      },
      "border": "0",
      "clip": "rect(1px,1px,1px,1px)",
      "clipPath": "inset(50%)",
      "color": "#FBFCFF",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "margin": "-1px",
      "overflow": "hidden",
      "overflowWrap": "break-word",
      "position": "absolute",
      "transition": "color var(--p-transition-duration, .24s) ease",
      "whiteSpace": "nowrap",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: textarea, hideLabel: true, state: true, theme: error and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "fontSize": ".875rem",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(textarea:not(:disabled):not(:focus):not([readonly])),::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover)": {
            "borderColor": "#9a2727 !important",
          },
        },
      },
      "border": "0",
      "clip": "rect(1px,1px,1px,1px)",
      "clipPath": "inset(50%)",
      "color": "#7E7F82",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "margin": "-1px",
      "overflow": "hidden",
      "overflowWrap": "break-word",
      "position": "absolute",
      "transition": "color var(--p-transition-duration, .24s) ease",
      "whiteSpace": "nowrap",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;
